# MP3Lame

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_study_mp3lame_MainActivity.c  com_study_mp3lame_MainActivity.h
app/src/main/java/com/study/mp3lame/: LogUtil.java  MP3Recorder.kt  MainActivity.kt  PlayerService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
